[package]
name = "company-api-client"
version = "99.2.1"
edition = "2025"
authors = ["DevTeam <dev@wowza.corp>"]
description = "Internal API client for company services"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"